Update Dockerfile
added package, unzip and changeloc